--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,22 @@ body,
         --radius: 0.5rem;
     }
 
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #fe2688;
+        border-radius: 5px;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+
     .dark {
         --background: 222.2 84% 4.9%;
         --foreground: 210 40% 98%;
